--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,3 +106,19 @@ jobs:
           ${{ secrets.VM_HOST }} ansible_user=${{ secrets.VM_USER }} ansible_ssh_private_key_file=~/.ssh/id_rsa
         options: |
           --extra-vars "docker_image=${{ secrets.DOCKER_USERNAME }}/laravel-api:latest"
+
+  # 5. Notificaciones (Opcional - Altamente valorada)
+  notify:
+    needs: [test, build-push, scan, deploy]
+    if: always() # Ejecutar siempre, incluso si fallan los anteriores
+    runs-on: ubuntu-latest
+    steps:
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_COLOR: ${{ contains(needs.*.result, 'failure') && 'danger' || 'good' }}
+          SLACK_TITLE: "Estado del Despliegue: ${{ contains(needs.*.result, 'failure') && 'FALLIDO ❌' || 'EXITOSO ✅' }}"
+          SLACK_MESSAGE: "El pipeline de CI/CD ha finalizado. Revisar GitHub Actions para detalles."
+          SLACK_FOOTER: "Laravel API CI/CD"
+
