--- a/infra/deploy.yml
+++ b/infra/deploy.yml
@@ -1,37 +1,67 @@
 - name: Deploy Laravel API
 hosts: all
-become: true
+become: yes
+vars:
+  project_dir: /opt/laravel-api
+  docker_image: ""{{ docker_image | default('tu-usuario/laravel-api:latest') }}""
 
 tasks:
+  - name: Update system and install dependencies
+    apt:
+      name: 
+        - docker.io
+        - docker-compose
+      state: present
+      update_cache: yes
+
+  - name: Ensure Docker service is running
+    service:
+      name: docker
+      state: started
+      enabled: yes
+
   - name: Create app directory
     file:
-      path: /opt/laravel-api
+      path: ""{{ project_dir }}""
       state: directory
       mode: '0755'
 
-  - name: Copy docker-compose file
+  - name: Copy production docker-compose
     copy:
       src: ../docker-compose.prod.yml
-      dest: /opt/laravel-api/docker-compose.yml
+      dest: ""{{ project_dir }}/docker-compose.yml""
 
-  - name: Pull latest Docker image
-    shell: docker-compose pull
-    args:
-      chdir: /opt/laravel-api
+  - name: Pull latest image
+    shell: |
+      cd {{ project_dir }}
+      docker-compose pull
     environment:
       DOCKER_IMAGE_NAME: ""{{ docker_image }}""
 
-  - name: Start containers
-    shell: docker-compose down && docker-compose up -d
-    args:
-      chdir: /opt/laravel-api
+  - name: Deploy containers
+    shell: |
+      cd {{ project_dir }}
+      docker-compose down
+      docker-compose up -d
     environment:
       DOCKER_IMAGE_NAME: ""{{ docker_image }}""
 
   - name: Fix permissions and Migrate DB
     shell: |
+      cd {{ project_dir }}
       sleep 10
       docker-compose exec -T app chmod -R 777 storage bootstrap/cache
+      docker-compose exec -T app php artisan config:clear
       docker-compose exec -T app php artisan migrate --force
-    args:
-      chdir: /opt/laravel-api
+
+  - name: Health Check
+    uri:
+      url: http://localhost/api/productos
+      method: GET
+      status_code: 200
+      timeout: 30
+    register: health_check
+    until: health_check.status == 200
+    retries: 5
+    delay: 10
+    ignore_errors: yes
