--- a/infra/deploy.yml
+++ b/infra/deploy.yml
@@ -1,67 +1,64 @@
 - name: Deploy Laravel API
-hosts: all
-become: yes
-vars:
-  project_dir: /opt/laravel-api
-  docker_image: ""{{ docker_image | default('tu-usuario/laravel-api:latest') }}""
+  hosts: all
+  become: yes
 
-tasks:
-  - name: Update system and install dependencies
-    apt:
-      name: 
-        - docker.io
-        - docker-compose
-      state: present
-      update_cache: yes
+  vars:
+    project_dir: /opt/laravel-api
+    docker_image: "{{ docker_image | default('mpetronm/laravel-api:latest') }}"
 
-  - name: Ensure Docker service is running
-    service:
-      name: docker
-      state: started
-      enabled: yes
+  tasks:
+    - name: Update system and install dependencies
+      apt:
+        name:
+          - docker.io
+          - docker-compose
+        state: present
+        update_cache: yes
 
-  - name: Create app directory
-    file:
-      path: ""{{ project_dir }}""
-      state: directory
-      mode: '0755'
+    - name: Ensure Docker service is running
+      service:
+        name: docker
+        state: started
+        enabled: yes
 
-  - name: Copy production docker-compose
-    copy:
-      src: ../docker-compose.prod.yml
-      dest: ""{{ project_dir }}/docker-compose.yml""
+    - name: Create app directory
+      file:
+        path: "{{ project_dir }}"
+        state: directory
+        mode: '0755'
 
-  - name: Pull latest image
-    shell: |
-      cd {{ project_dir }}
-      docker-compose pull
-    environment:
-      DOCKER_IMAGE_NAME: ""{{ docker_image }}""
+    - name: Copy production docker-compose
+      copy:
+        src: docker-compose.prod.yml
+        dest: "{{ project_dir }}/docker-compose.yml"
 
-  - name: Deploy containers
-    shell: |
-      cd {{ project_dir }}
-      docker-compose down
-      docker-compose up -d
-    environment:
-      DOCKER_IMAGE_NAME: ""{{ docker_image }}""
+    - name: Pull latest image
+      shell: |
+        cd {{ project_dir }}
+        docker-compose pull
 
-  - name: Fix permissions and Migrate DB
-    shell: |
-      cd {{ project_dir }}
-      sleep 10
-      docker-compose exec -T app chmod -R 777 storage bootstrap/cache
-      docker-compose exec -T app php artisan config:clear
-      docker-compose exec -T app php artisan migrate --force
+    - name: Deploy containers
+      shell: |
+        cd {{ project_dir }}
+        docker-compose down || true
+        docker-compose up -d
 
-  - name: Health Check
-    uri:
-      url: http://localhost/api/productos
-      method: GET
-      status_code: 200
-      timeout: 30
-    register: health_check
-    until: health_check.status == 200
-    retries: 5
-    delay: 10
-    ignore_errors: yes
+    - name: Fix permissions and migrate DB
+      shell: |
+        cd {{ project_dir }}
+        sleep 10
+        docker-compose exec -T app chmod -R 777 storage bootstrap/cache
+        docker-compose exec -T app php artisan key:generate || true
+        docker-compose exec -T app php artisan migrate --force || true
+
+    - name: Health Check
+      uri:
+        url: http://localhost/api/productos
+        method: GET
+        status_code: 200
+        timeout: 30
+      register: health_check
+      until: health_check.status == 200
+      retries: 5
+      delay: 10
+      ignore_errors: yes
